# TechCare

./: .replit  Diplom.txt  README.md  achievement_system.py  achievements.py  adaptive_components.py  advanced_monitor.py  ai.py  ai_engine.py  ai_tab.py  app.py  auto_repair.py  benchmarking.py  data_history.json  data_manager.py  data_manager_sqlite_backup.py  diagnostic_tools.py  gamification.py  gui.py  icons.py  images_instruction.txt  install_dependencies.txt  intelligence_core.py  json_data.py  main.py  main_dashboard.py  maintenance_scheduler.py  monitor.py  my_app.py  performance_tester.py  pyproject.toml  repair.py  requirements.txt  responsive_ui.py  scheduler.py  simple_achievements.py  simple_ai.py  simple_data.py  simple_repair.py  simple_tests.py  (+8 more)
.streamlit/: config.toml
attached_assets/: .replit  Diplom.txt  Pasted--desktop-TechCare-Tkinter-Streamlit--1748727053383.txt  README.md  additional_features.py  advanced_monitor.py  gui.py  main.py  monitor.py  pyproject.toml  reminder.py  requirements.txt  web_app.py
