[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.6",
    "openai>=1.82.1",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "schedule>=1.2.2",
    "scikit-learn>=1.6.1",
    "streamlit>=1.45.1",
]
